# lms

./: .env_sample  README.md  cmd.txt  cov_report_1.txt  coverage_report.txt  drf.cmd  pyproject.toml  tz.txt
config/: celery.py  settings.py  urls.py
data/: course_fixture.json  lesson_fixture.json  payments_fixture.json  users_fixture.json
lms/: models.py  paginators.py  serializer.py  task.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: add_lesson.py  create_less.py  drop_less_course
lms/migrations/: 0001_initial.py  0002_alter_course_description.py  0003_alter_lesson_course.py  0004_alter_course_preview_alter_lesson_preview.py  0005_course_owner_lesson_owner.py  0006_subscription.py
users/: admin.py  models.py  permissions.py  serializer.py  servises.py  stripe_sample.py  task.py  urls.py  validators.py  views.py
users/management/commands/: add_user.py  create_group.py  create_user.py  csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_pay_course_alter_payments_pay_lesson.py  0004_alter_payments_user_pay.py  0005_payments_payment_link_payments_session_id.py  0006_alter_payments_pay_course_alter_payments_pay_lesson.py  0007_alter_payments_payment_link.py
